# nav2_ws

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  README.md  README_old.md  RMUL2026.step  ToDoList.md  ros2bag.sh  save_map.sh  todolist.md  tutorial.md
autostart/: install.sh  nav_auto_launch.service  serviceInstall.txt  uninstall.sh
config/: mid360_user_config.json
docs/: ToDoList.md  rmul决策树方案.md  tutorial.md  学习指南.md
scripts/: MVS.sh  colconBuild.sh  easyMVS.sh  floor10_nav.sh  floor10_nav_decision.sh  local_player_5000.sh  local_referee_2350.sh  map.sh  real_save_map.sh  ros2bag.sh  run_two_tabs.sh  simu_gz.sh  simu_map.sh  simu_nav.sh  simu_save_map.sh  test_desicion_simple.sh
src/communication/: CMakeLists.txt  README.md  package.xml
src/communication/config/: cmd_vel_test.yaml  communication.yaml
src/communication/include/communication/: Com.h  bridge.hpp  ros_serial_bridge.hpp  termcolor.hpp
src/communication/include/misc/: pangolin_visualizer.hpp
src/communication/launch/: cmd_vel_test.launch.py  communication.launch.py
src/communication/src/: Com.cpp  array25_bridge.cpp  bridge.cpp  cmd_vel_test.cpp  cmdvel_sine_pub.cpp
src/decision_simple/: CMakeLists.txt  package.xml
src/decision_simple/config/: decision_simple.yaml
src/decision_simple/include/decision_simple/: DecisionSimpleNode.hpp  EnvironmentContext.hpp  Interfaces.hpp  decision_simple.hpp  macro_autoaim.hpp
src/decision_simple/include/decision_simple/adapter/: transform.hpp
src/decision_simple/include/decision_simple/context/: environment_context.hpp
src/decision_simple/include/decision_simple/core/: decision.hpp  environment_context.hpp  interfaces.hpp  types.hpp
src/decision_simple/include/decision_simple/node/: decision_simple.hpp
src/decision_simple/launch/: decision_simple.launch.py
src/decision_simple/src/: DecisionSimpleNode.cpp  EnvironmentContext.cpp  adapter_transform.cpp  context_environment_context.cpp  decision.cpp  decision_simple.cpp  decision_simple_main.cpp  transform.cpp
src/decision_simple/test/: general.cpp
src/fake_referee/: CMakeLists.txt  package.xml
src/fake_referee/include/fake_referee/: fake_referee.hpp
src/fake_referee/params/: fake_referee_params.yaml
src/fake_referee/src/: fake_referee.cpp
