<?xml version="1.0"?>
<package format="3">
  <name>communication</name>
  <version>0.1.0</version>
  <description>Serial communication package for Array25 frames (A5 5A | 0x31 | 25 | payload | CRC8).</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
